--- a/resources/views/user/buttons.html
+++ b/resources/views/user/buttons.html
@@ -485,7 +485,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     
   <script>
       //custom select box
