--- a/resources/views/user/calendar.html
+++ b/resources/views/user/calendar.html
@@ -284,7 +284,7 @@
       <section id="main-content">
           <section class="wrapper">
           	<h3><i class="fa fa-angle-right"></i> Calendar</h3>
-              <!-- page start-->
+              <!-- pages start-->
               <div class="row mt">
                   <aside class="col-lg-3 mt">
                       <h4><i class="fa fa-angle-right"></i> Draggable Events</h4>
@@ -312,7 +312,7 @@
                       </section>
                   </aside>
               </div>
-              <!-- page end-->
+              <!-- pages end-->
 		</section><! --/wrapper -->
       </section><!-- /MAIN CONTENT -->
 
@@ -342,7 +342,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
 	<script src="assets/js/calendar-conf-events.js"></script>    
   
   <script>
