--- a/resources/views/user/chartjs.html
+++ b/resources/views/user/chartjs.html
@@ -284,7 +284,7 @@
       <section id="main-content">
           <section class="wrapper">
           <h3><i class="fa fa-angle-right"></i> Chartjs Charts</h3>
-              <!-- page start-->
+              <!-- pages start-->
               <div class="tab-pane" id="chartjs">
                   <div class="row mt">
                       <div class="col-lg-6">
@@ -341,7 +341,7 @@
                       </div>
                   </div>
               </div>
-              <!-- page end-->
+              <!-- pages end-->
           </section>          
       </section><!-- /MAIN CONTENT -->
 
@@ -369,7 +369,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     <script src="assets/js/chart-master/Chart.js"></script>
     <script src="assets/js/chartjs-conf.js"></script>
     
