--- a/resources/views/user/gallery.html
+++ b/resources/views/user/gallery.html
@@ -437,7 +437,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
   
   <script type="text/javascript">
       $(function() {
