--- a/resources/views/user/morris.html
+++ b/resources/views/user/morris.html
@@ -284,7 +284,7 @@
       <section id="main-content">
           <section class="wrapper site-min-height">
           <h3><i class="fa fa-angle-right"></i> Morris Charts</h3>
-              <!-- page start-->
+              <!-- pages start-->
               <div id="morris">
                   <div class="row mt">
                       <div class="col-lg-6">
@@ -323,7 +323,7 @@
                       </div>
                   </div>
               </div>
-              <!-- page end-->
+              <!-- pages end-->
           </section>
       </section><!-- /MAIN CONTENT -->
 
@@ -353,7 +353,7 @@
 	<script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     <script src="assets/js/morris-conf.js"></script>
     
   <script>
