--- a/resources/views/user/blank.html
+++ b/resources/views/user/blank.html
@@ -318,7 +318,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     
   <script>
       //custom select box
