--- a/resources/views/user/form_component.html
+++ b/resources/views/user/form_component.html
@@ -518,7 +518,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     <script src="assets/js/jquery-ui-1.9.2.custom.min.js"></script>
 
 	<!--custom switch-->
