--- a/resources/views/user/panels.html
+++ b/resources/views/user/panels.html
@@ -662,7 +662,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     <script src="assets/js/sparkline-chart.js"></script>    
     
     
