--- a/resources/views/user/responsive_table.html
+++ b/resources/views/user/responsive_table.html
@@ -608,7 +608,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
     
 
   </body>
