--- a/resources/views/user/todo_list.html
+++ b/resources/views/user/todo_list.html
@@ -554,7 +554,7 @@
     <!--common script for all pages-->
     <script src="assets/js/common-scripts.js"></script>
 
-    <!--script for this page-->
+    <!--script for this pages-->
 	<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>    
     <script src="assets/js/tasks.js" type="text/javascript"></script>
 
