--- a/resources/views/user/blank.html
+++ b/resources/views/user/blank.html
@@ -281,7 +281,7 @@
       *********************************************************************************************************************************************************** -->
       <!--main content start-->
       <section id="main-content">
-          <section class="wrapper site-min-height">
+          <section class="wrapper site-min-height" id="wrapper">
           	<h3><i class="fa fa-angle-right"></i> Blank Page</h3>
           	<div class="row mt">
           		<div class="col-lg-12">
