ajax off add calc form add all mini form

--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -21,3 +21,21 @@
 .progress{
     margin-bottom: 0px;
 }
+
+.inform-nakrutka{
+
+}
+
+.text-st .text-c{
+    font-size: 16px;
+    text-shadow: -1px 0px 0px #3e6397;
+    padding-top: 7px;
+}
+
+.balans-text{
+    font-size: 20px;
+}
+
+.my-mt{
+    margin-top: 13px;
+}
