--- a/public/user/assets/css/common.css
+++ b/public/user/assets/css/common.css
@@ -1,7 +1,7 @@
 .cd-dropdown,
 .cd-select {
 	position: relative;
-	width: 300px;
+	width: 320px;
 	margin: 20px auto;
 	display: block;
 }
@@ -18,6 +18,7 @@
 	padding: 0 50px 0 30px;
 	position: relative;
 	cursor: pointer;
+    text-align: center;
 }
 
 .cd-dropdown > span:after {
