--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -46,3 +46,28 @@ ul.sidebar-menu li a.active {
     text-align: center;
     text-shadow: 2px 2px 1px black;
 }
+
+.cd-dropdown span[class^="whhg-"]:before, .cd-dropdown span[class*=" whhg-"]:before {
+    font-style: normal;
+    speak: none;
+    font-weight: normal;
+    position: absolute;
+    font-size: 40px;
+    line-height: 40px;
+    width: 50px;
+    top: 50%;
+    left: 15px;
+    margin-top: -20px;
+    text-align: center;
+}
+
+.select-work {
+    z-index: 1;
+}
+
+.work-center {
+    z-index: 0;
+    min-height: 500px;
+    background-color: #dadada;
+    box-shadow: 0px 0px 8px black;
+}
