--- a/public/user/assets/css/to-do.css
+++ b/public/user/assets/css/to-do.css
@@ -2,13 +2,14 @@
 
 .task-content {
     margin-bottom: 30px;
+    margin-top: 45px;
 }
 
 .task-panel {
-	background: #fff;
+	background: transparent;
 	text-align: left;
-	box-shadow: 0px 3px 2px #aab2bd;
 	margin: 5px;
+
 }
 
 .tasks-widget .task-content:after {
@@ -83,7 +84,10 @@
 }
 
 .tasks-widget .task-list  li:hover  {
-  background:#f9f9f9;
+  background: #f3f3f3;
+  /*font-weight: 700;*/
+  box-shadow: 0px 0px 3px black;
+    border-radius: 2px;
 }
 
 .tasks-widget .task-list  li .task-config {
