--- a/public/user/assets/css/to-do.css
+++ b/public/user/assets/css/to-do.css
@@ -84,9 +84,9 @@
 }
 
 .tasks-widget .task-list  li:hover  {
-  background: #f3f3f3;
+  background: #b5d4ff;
   /*font-weight: 700;*/
-  box-shadow: 0px 0px 3px black;
+  /*box-shadow: 0px 0px 3px black;*/
     border-radius: 2px;
 }
 
