--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -103,9 +103,44 @@ ul.sidebar-menu .sub-menu .sub a.active{
     background-color: transparent;
 }
 
-ul.sidebar-menu .sub-menu .sub a:active,
+ul.sidebar-menu .sub-menu .sub a.active,
 ul.sidebar-menu .sub-menu .sub a:hover,
 ul.sidebar-menu .sub-menu .sub a:focus{
-    box-shadow: 0px 0px 0px black;
+    box-shadow: none;
     text-decoration: underline;
+    color: #fafce1;
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{
+    color: #d5dfff;
+    text-shadow: 0px 0px 1px white;
+    background-color: #375e88;
+    font-size: 14px;
+    margin-right: 5px;
+    margin-bottom: 6px;
+}
+
+.nav-tabs > li > a {
+    color: #d5dfff;
+    text-shadow: 0px 0px 1px white;
+    background-color: #375e88;
+    font-size: 14px;
+    margin-right: 5px;
+    margin-bottom: 6px;
+}
+
+.nav-tabs > li > a:hover, .nav-tabs > li > a:focus{
+    color: #000000;
+    text-shadow: 0px 0px 1px #5b7dff;
+    background-color: #abd5ff;
+    box-shadow: -4px -5px 0px #88acd5;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.respons li {
+    width: 100%;
 }
