--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -158,3 +158,18 @@ ul.sidebar-menu .sub-menu .sub a:focus{
 .resetTabRef {
     display: inline;
 }
+
+.refer-panel {
+    color: #ffffff;
+    box-shadow: 0px 0px 3px #414141;
+    height: 280px;
+}
+
+.refer-panel:hover {
+    color: #ffffff;
+    box-shadow: 0px 0px 7px #000000;
+}
+
+.info-ref li{
+    list-style: circle;
+}
