--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -200,3 +200,11 @@ ul.sidebar-menu .sub-menu .sub a:focus{
 .refer-panel:hover {
     box-shadow: 0px 0px 20px rgba(0, 46, 151, 0.86);
 }
+
+.all-center {
+    font-size: 50px;
+    margin-top: 17%;
+    text-align: center;
+    font-family: "PoiretOneNormal", sans-serif;
+
+}
