--- a/public/user/assets/css/style.css
+++ b/public/user/assets/css/style.css
@@ -1497,7 +1497,7 @@ PANELS CONFIGURATIONS
 /* PROFILE PANELS */
 /* Profile 01*/
 #profile-01 {
-	background: url(../img/profile-01.jpg) no-repeat center top;
+	background: url(../img/profile-02.jpg) no-repeat center top;
 	margin-top: -15px;
 	background-attachment: relative;
 	background-position: center center;
@@ -1518,6 +1518,12 @@ PANELS CONFIGURATIONS
 	margin: 0px;
 	text-align: center;
 }
+#profile-01 h4 {
+    color: white;
+    text-align: center;
+    margin-bottom: 0px;
+    font-weight: 900;
+}
 #profile-01 h6 {
 	color: white;
 	text-align: center;
@@ -1525,11 +1531,11 @@ PANELS CONFIGURATIONS
 	font-weight: 900;
 }
 .profile-01 {
-	background: #68dff0;
-	height: 50px;
+	background: #528df0;
+	height: 57px;
 }
 .profile-01:hover {
-	background: #2f2f2f;
+	background: #73de6a;
   -webkit-transition: background-color 0.6s;
   -moz-transition: background-color 0.6s;
   -o-transition: background-color 0.6s;
