--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -176,10 +176,17 @@ ul.sidebar-menu .sub-menu .sub a:focus{
     box-shadow: 0px 0px 1px #000;
 }
 
-.avatarka img{
-    height: 300px;
-    width: 100%;
+.avatarka{
+    width: 300px;
+}
+.avatarka p{
+    text-align: center;
     margin-bottom: 20px;
+}
+
+.avatarka p img{
+    height: 300px;
+    width: 250px;
     /*border-radius: 30%;*/
 }
 
