--- a/public/user/assets/css/mystyle2.css
+++ b/public/user/assets/css/mystyle2.css
@@ -1,3 +1,14 @@
-#vk_groups2{
-    width: 100%;
+.myBadge{
+    display: inline-block;
+    min-width: 10px;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    background-color: #777;
+    border-radius: 10px;
 }
