--- a/public/user/assets/css/mystyle.css
+++ b/public/user/assets/css/mystyle.css
@@ -173,12 +173,40 @@ ul.sidebar-menu .sub-menu .sub a:focus{
     font-weight: 700;
     padding: 10px;
     background-color: transparent;
-    box-shadow: 0px 0px 1px #000;
+    box-shadow: 0px 0px 20px #000000;
+}
+
+.user-block{
+    font-family: PoiretOneNormal, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 10px;
+    background-color: transparent;
+    box-shadow: 0px 0px 20px #000000;
 }
 
 .avatarka{
-    width: 300px;
+    width: 190px;
+    height: 310px;
+    box-shadow: 0px 0px 20px #c0aa6b;
 }
+
+@media screen and (min-width:769px) and (max-width:991px) {
+    .avatarka{
+        width: 160px;
+        height: 280px;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (min-width:480px) and (max-width:768px) {
+    .avatarka{
+        width: 145px;
+        height: 180px;
+        margin-top: 15px;
+    }
+}
+
 .avatarka p{
     text-align: center;
     margin-bottom: 20px;
@@ -271,5 +299,4 @@ ul.sidebar-menu .sub-menu .sub a:focus{
 
 .text16 {
     font-size: 16px;
-
 }
